--- a/cn-resume.html
+++ b/cn-resume.html
@@ -712,12 +712,12 @@
         <h3>学术职能</h3>
         <ul class="square">
           <li><strong>国际组织/智库: </strong><br>
-            - <strong>萨尔茨堡全球研讨会: KFAS-Salzburg</strong>, Fellow/研究员 (KFAS-SGS, 2024-2025)<br>
+            <!-- - <strong>萨尔茨堡全球研讨会: KFAS-Salzburg</strong>, Fellow/研究员 (KFAS-SGS, 2024-2025)<br> -->
             - <strong>联合国波恩气候变化大会: 分会主持人</strong>, 青年代表/演讲人 (UNFCCC, 2023-2024)<br>
             - <strong>联合国欧洲经济委员会: 气候变化与陆上交通</strong> 专家组成员/内部咨询 (UNECE, 2023-2024)<br>
             - <strong>瑞士圣加仑国际经济论坛: </strong> 学术评审 (St. Gallen Symposium, 2023-2024)<br>
-            - <strong>联合国欧洲经济委员会: 可持续能源(氢能) </strong> 工作组会议成员 (UNECE, 2024)<br>
-            - <strong>联合国欧洲经济委员会: 电动交通</strong> 工作组会议成员 (UNECE, 2024)<br>
+            <!-- - <strong>联合国欧洲经济委员会: 可持续能源(氢能) </strong> 工作组会议成员 (UNECE, 2024)<br> -->
+            <!-- - <strong>联合国欧洲经济委员会: 电动交通</strong> 工作组会议成员 (UNECE, 2024)<br> -->
             <hr>
           <li><strong>审稿人 (40+篇): </strong><br>
             - <strong>能源转换与管理杂志</strong> (Energy Conversion & Management, 影响因子: 11.2, 2021) <br>
@@ -933,10 +933,10 @@
           <li><strong>线上会议</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank" target="_blank"><span
                 class='blue'>calendly.com/heliosxu/45min</span></a> (1vs1会议, 请提前预约)</li>
           <li><strong>领英</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
-                class='blue'>linkedin.com/in/xuhong/</span></a> (关注者: 1800+)<br></li>
+                class='blue'>linkedin.com/in/xuhong/</span></a> (关注者: 1900+)<br></li>
           <li><strong>谷歌学术</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
               target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (引用数:
-            300+)<br></li>
+            320+)<br></li>
           <li><strong>知乎</strong>: <a href="https://www.zhihu.com/people/dr.of.nothing" target="_blank"
               target="_blank"><span class='blue'>zhihu.com/people/dr.of.nothing</span></a> (关注者:
             13500+)<br></li>
@@ -1019,7 +1019,7 @@
         <p><strong>有限游戏</strong>以<strong>取胜</strong>为目的，<strong>无限游戏</strong>以<strong>延续</strong>游戏为宗旨。<br><small>版权 ©
             2016 -
             <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | 徐泓
-            <small>博士</small> | 更新: 2024年7月 <a href="https://www.sigmatraffic.com?ref=232975"></a>
+            <small>博士</small> | 更新: 2024年9月 <a href="https://www.sigmatraffic.com?ref=232975"></a>
           </small></p>
       </footer>
 
