--- a/cn.html
+++ b/cn.html
@@ -505,13 +505,12 @@
         <p align="justify">
           <span class="display-mobile">欢迎来自<span id="location2">地球</span>的朋友 :-）</br></br></span>
 
-          目前，徐泓博士在德国工业界担任<strong>新能源动力系统</strong>专家工程师，致力于实现<strong>能源与交通</strong>领域<strong>碳中和</strong>。攻读学位期间与跨国企业及中欧学术机构合作发表<strong>论文15余篇</strong>、<strong>引用300余次</strong>,
-          并获<strong>3项专利授权</strong>。曾在<strong><a href="https://unfccc.int/"
+          目前，徐泓博士在德国工业界担任<strong>新能源动力系统</strong>专家工程师，致力于实现<strong>能源与交通</strong>领域<strong>碳中和</strong>。攻读学位期间与跨国企业及中欧学术机构合作发表<strong>论文15余篇</strong>，并获得<strong>3项专利授权</strong>。曾在<strong><a
+              href="https://unfccc.int/"
               target="_blank">联合国波恩气候变化大会</a></strong>主持“中国<strong>能源转型</strong>与技术创新”主题分会，多次参与<strong><a
               href="https://unece.org/"
               target="_blank">联合国欧洲经济委员会</a></strong>关于<strong>交通与气候专家组</strong>会议以及<strong>氢能工作小组</strong>会议讨论。同时他还担任多项能源和交通领域高引期刊的<strong>审稿人</strong>,
-          瑞士<strong>圣加仑国际论坛</strong>的<strong>学术评审</strong>,
-          以及奥地利<strong>萨尔茨堡国际研讨会</strong>的<strong>研究员</strong>。曾获得美国电化学学会论文邀请及旅行奖、英特尔边缘AI奖学金、欧盟伊拉斯谟奖学金、“挑战杯”创业全国铜奖等。
+          瑞士<strong>圣加仑国际论坛</strong>的<strong>学术评审</strong>。曾获得奥地利萨尔茨堡国际研讨会<strong>旅行奖</strong>、美国电化学学会<strong>论文邀请</strong>及旅行奖、欧盟伊拉斯谟奖学金、“挑战杯”创业全国铜奖等。
         </p>
 
         <p align="justify">
@@ -521,11 +520,11 @@
               target="_blank">英国牛津能源研究所</a></strong>、<strong><a href="https://tum.de"
               target="_blank">德国慕尼黑工业大学</a></strong>、<strong><a href="https://ecoledesponts.fr/en"
               target="_blank">法国巴黎高科路桥大学</a></strong><strong>、<a href="https://xfel.eu"
-              target="_blank">欧盟自由电子激光器</a></strong>等国际机构工作/实习，同时与<strong>日本丰田汽车</strong>、<strong>德国英飞凌半导体</strong>、<strong>德国科德宝集团</strong>等跨国公司开展深度研发合作。此外，他被<strong><a
+              target="_blank">欧盟自由电子激光器</a></strong>等国际机构工作/实习，同时与<strong>日本丰田汽车</strong>、<strong>德国英飞凌半导体</strong>等跨国公司开展深度研发合作。此外，他被<strong><a
               href="https://quantic.edu/mba"
               target="_blank">美国昆藤商学院</a></strong>全奖录取远程学习并颁发<strong>MBA</strong>学位，曾获桑坦德银行奖学金赴<strong><a
-              href="https://www.jbs.cam.ac.uk/" target="_blank">剑桥大学商学院</a></strong>学习“绿色转型”企业管理课程，并曾在头部证券研究所 (A股&美股)
-          撰写个股深度/行业研究报告以及在双币基金 (种子轮➔A轮) 从事新能源赛道风投实践。
+              href="https://www.jbs.cam.ac.uk/" target="_blank">剑桥大学商学院</a></strong>学习“绿色转型”企管课程，并曾在头部证券研究所 (A股&美股)
+          撰写个股深度报告以及在双币基金 (种子轮➔A轮) 从事新能源赛道风投实践。
         </p>
 
         <p style="text-align:left;">
@@ -688,10 +687,10 @@
           <li><strong>线上会议</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank" target="_blank"><span
                 class='blue'>calendly.com/heliosxu/45min</span></a> (1vs1会议, 请提前预约)</li>
           <li><strong>领英</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
-                class='blue'>linkedin.com/in/xuhong/</span></a> (关注者: 1800+)<br></li>
+                class='blue'>linkedin.com/in/xuhong/</span></a> (关注者: 1900+)<br></li>
           <li><strong>谷歌学术</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
               target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (引用数: <span
-              id="citation-count">300+</span>)<br></li>
+              id="citation-count">320+</span>)<br></li>
           <li><strong>知乎</strong>: <a href="https://www.zhihu.com/people/dr.of.nothing" target="_blank"
               target="_blank"><span class='blue'>zhihu.com/people/dr.of.nothing</span></a> (关注者: 13700+)<br></li>
           <!-- <li><strong>摄影</strong>: <a href="https://photo.h-xu.com/" target="_blank"
@@ -767,7 +766,7 @@
         <p><strong>有限游戏</strong>以<strong>取胜</strong>为目的，<strong>无限游戏</strong>以<strong>延续</strong>游戏为宗旨。<br><small>版权 ©
             2016 -
             <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | 徐泓
-            <small>博士</small> | 更新: 2024年6月 <a href="https://www.sigmatraffic.com?ref=232975"></a>
+            <small>博士</small> | 更新: 2024年9月 <a href="https://www.sigmatraffic.com?ref=232975"></a>
           </small></p>
       </footer>
 
