--- a/de-research.html
+++ b/de-research.html
@@ -768,7 +768,7 @@
         </ol>
       </div>
 
-      <hr class="display-mobile" style="width:113%">
+      <!-- <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="dissertations">
@@ -799,7 +799,7 @@
               Peking]</text>. Peking, China.
           </li>
         </ol>
-      </div>
+      </div> -->
 
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
