--- a/de.html
+++ b/de.html
@@ -512,7 +512,7 @@
         <strong>e-Power-Systeme</strong> mit Sitz in München, engagiert für die Erreichung der Klimaneutralität in den
         Sektoren <strong>Energie</strong> und <strong>Transport</strong>. Im Laufe seiner Karriere hat er mit
         internationalen Unternehmen und akademischen Institutionen in Europa und China zusammengearbeitet, über
-        <strong>15 veröffentlichte Artikel</strong> mit fast <strong>300 Zitierungen</strong> und <strong>3 erteilte
+        <strong>15 veröffentlichte Artikel</strong> und <strong>3 erteilte
           Patente</strong> erzielt. Zudem leitete er eine Sitzung auf der <strong><a href="https://unfccc.int/"
             target="_blank">UN-Klimakonferenz</a></strong> in Bonn, nahm an der Expertengruppe der <strong><a
             href="https://unece.org/" target="_blank">UN-Wirtschaftskommission für Europa</a></strong> in Genf teil und
