--- a/en.html
+++ b/en.html
@@ -501,8 +501,8 @@
         Currently, Dr. Hong Xu serves as an <strong>R&D Engineer</strong> specializing in <strong>e-Power
           Systems</strong> based in Munich, dedicated to achieving carbon neutrality in the <strong>Energy</strong> and
         <strong>Transport</strong> sectors. Throughout his career, he has worked with international corporations and
-        academic institutions in Europe and China, achieving over <strong>15 published papers</strong> with nearly
-        <strong>300 citations</strong>, and <strong>3 granted patents</strong>. Moreover, he chaired a session at the
+        academic institutions in Europe and China, achieving <strong>15 published papers</strong> and <strong>3
+          granted patents</strong>. Moreover, he chaired a session at the
         <strong><a href="https://unfccc.int/" target="_blank">UN Climate Change Conference</a></strong> in Bonn,
         participated Group of Experts at the <strong><a href="https://unece.org/" target="_blank">UN Economic Commission
             for Europe</a></strong> based in Geneva, and served as an <strong>Academic Jury</strong> at the <strong><a
