--- a/es-research.html
+++ b/es-research.html
@@ -774,7 +774,7 @@
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
 
-      <div class="doc-section" id="dissertations">
+      <!-- <div class="doc-section" id="dissertations">
         <h3>Tesis <small><small></small></small></h3>
         <ol>
           <li>
@@ -803,7 +803,7 @@
               Pekín]</text>. Pekín, China.
           </li>
         </ol>
-      </div>
+      </div> -->
 
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
