--- a/es.html
+++ b/es.html
@@ -514,7 +514,7 @@
           e-Power</strong> con sede en Múnich, dedicado a lograr la neutralidad de carbono en los sectores de
         <strong>Energía</strong> y <strong>Transporte</strong>. A lo largo de su carrera, ha trabajado con corporaciones
         internacionales e instituciones académicas en Europa y China, logrando más de <strong>15 artículos
-          publicados</strong> con casi <strong>300 citas</strong> y <strong>3 patentes otorgadas</strong>. Además,
+          publicados</strong> y <strong>3 patentes otorgadas</strong>. Además,
         presidió una sesión en la <strong><a href="https://unfccc.int/" target="_blank">Conferencia de la ONU sobre el
             Cambio Climático</a></strong> en Bonn, participó en el Grupo de Expertos de la <strong><a
             href="https://unece.org/" target="_blank">Comisión Económica de la ONU para Europa</a></strong> con sede en
