--- a/fr-research.html
+++ b/fr-research.html
@@ -805,7 +805,7 @@
         </ol>
       </div>
 
-      <hr class="display-mobile" style="width:113%">
+      <!-- <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
       <div class="doc-section" id="Dissertations">
         <h3>Thèses</h3>
@@ -834,7 +834,7 @@
               Chine, 2013.</em> [<a href="" target="_blank">PDF</a>]
           </li>
         </ol>
-      </div>
+      </div> -->
 
 
       <hr class="display-mobile" style="width:113%">
