--- a/fr.html
+++ b/fr.html
@@ -525,7 +525,7 @@
           e-Power</strong> basé à Munich, dédié à la réalisation de la neutralité carbone dans les secteurs de
         <strong>l'énergie</strong> et des <strong>transports</strong>. Au cours de sa carrière, il a travaillé avec des
         entreprises internationales et des institutions académiques en Europe et en Chine, réalisant plus de <strong>15
-          articles publiés</strong> avec près de <strong>300 citations</strong>, et <strong>3 brevets accordés</strong>.
+          articles publiés</strong> et <strong>3 brevets accordés</strong>.
         De plus, il a présidé une session à la <strong><a href="https://unfccc.int/" target="_blank">Conférence de l'ONU
             sur les changements climatiques</a></strong> à Bonn, a participé au Groupe d'experts de la <strong><a
             href="https://unece.org/" target="_blank">Commission économique de l'ONU pour l'Europe</a></strong> basée à
