--- a/it-research.html
+++ b/it-research.html
@@ -771,7 +771,7 @@
         </ol>
       </div>
 
-      <hr class="display-mobile" style="width:113%">
+      <!-- <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="dissertations">
@@ -803,7 +803,7 @@
               Pechino]</text>. Pechino, Cina.
           </li>
         </ol>
-      </div>
+      </div> -->
 
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
