--- a/jp-research.html
+++ b/jp-research.html
@@ -799,7 +799,7 @@
       </div>
 
 
-      <hr class="display-mobile" style="width:113%">
+      <!-- <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="dissertations">
@@ -832,7 +832,7 @@
             <em><strong>学部</strong>論文. 北京交通大学. 北京、中国、2013年.</em> [<a href="" target="_blank">PDF</a>]
           </li>
         </ol>
-      </div>
+      </div> -->
 
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
