--- a/jp-resume.html
+++ b/jp-resume.html
@@ -535,12 +535,12 @@
         <h3>学術職能</h3>
         <ul class="square">
           <li><strong>国際組織/シンクタンク: </strong><br>
-            - <strong>ザルツブルク・グローバル・セミナー: KFAS-Salzburg</strong>, フェロー/研究員 (KFAS-SGS, 2024-2025)<br>
+            <!-- - <strong>ザルツブルク・グローバル・セミナー: KFAS-Salzburg</strong>, フェロー/研究員 (KFAS-SGS, 2024-2025)<br> -->
             - <strong>国連ボン気候変動会議: 分会司会者</strong>, 青年代表/スピーカー (UNFCCC, 2023-2024)<br>
             - <strong>国連欧州経済委員会: 気候変動と陸上交通</strong> 専門家グループメンバー (UNECE, 2023-2024)<br>
             - <strong>スイス・サンクトガレン国際経済フォーラム: </strong> 学術審査員 (St. Gallen Symposium, 2023-2024)<br>
-            - <strong>国連欧州経済委員会: 持続可能なエネルギー(水素エネルギー) </strong> 作業部会メンバー (UNECE, 2024)<br>
-            - <strong>国連欧州経済委員会: 電動交通</strong> 作業部会メンバー (UNECE, 2024)<br>
+            <!-- - <strong>国連欧州経済委員会: 持続可能なエネルギー(水素エネルギー) </strong> 作業部会メンバー (UNECE, 2024)<br>
+            - <strong>国連欧州経済委員会: 電動交通</strong> 作業部会メンバー (UNECE, 2024)<br> -->
             <hr>
           <li><strong>査読者 (40+回): </strong><br>
             - <strong>エネルギー変換と管理</strong> (Energy Conversion & Management, インパクトファクター: 11.2, 2021) <br>
