--- a/jp.html
+++ b/jp.html
@@ -515,9 +515,9 @@
         <span class="display-mobile">ようこそ、<span id="location2">地球</span>からの友達 :-）</br></br></span>
 
         現在、徐泓
-        (
+        <!-- (
         <script
-          id="first-script">const currentYear = new Date().getFullYear() - 1993; document.write(currentYear);</script>歲)
+          id="first-script">const currentYear = new Date().getFullYear() - 1993; document.write(currentYear);</script>歲) -->
         博士はドイツの産業界で<strong>新エネルギー動力システム</strong>の専門エンジニアとして働いており、<strong>エネルギーと交通</strong>分野の<strong>カーボンニュートラル</strong>の実現に取り組んでいます。学位取得中に多国籍企業や中欧の学術機関と協力して<strong>15本以上の論文</strong>を発表し、<strong>300回以上引用</strong>され、<strong>3つの特許</strong>を取得しました。<strong><a
             href="https://unfccc.int/"
             target="_blank">国連ボン気候変動会議</a></strong>で「中国の<strong>エネルギー転換</strong>と技術革新」をテーマにした分科会を主催し、<strong><a
