--- a/kr-activities.html
+++ b/kr-activities.html
@@ -560,7 +560,7 @@
 
 
 
-
+      <!-- 
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
 
@@ -569,33 +569,19 @@
         <h3>박사 라운드테이블</h3>
 
         <div class="tabset">
-          <!-- Tab 1 -->
+
           <input type="radio" name="tabset" id="tab1" aria-controls="session1">
           <label for="tab1">제1회</label>
-          <!-- Tab 2 -->
+
           <input type="radio" name="tabset" id="tab2" aria-controls="session2">
           <label for="tab2">제2회</label>
-          <!-- Tab 3 -->
+
           <input type="radio" name="tabset" id="tab3" aria-controls="session3" checked>
           <label for="tab3">제3회</label>
-          <!-- Tab 4 -->
+
           <input type="radio" name="tabset" id="tab4" aria-controls="session4">
           <label for="tab4">제4회</label>
-          <!-- Tab 5-->
-          <!-- <input type="radio" name="tabset" id="tab5" aria-controls="session5" >
-      <label for="tab5">第5期</label> -->
-          <!-- Tab 6 -->
-          <!-- <input type="radio" name="tabset" id="tab6" aria-controls="session6" >
-    <label for="tab6">第6期</label> -->
-          <!-- Tab 7 -->
-          <!-- <input type="radio" name="tabset" id="tab7" aria-controls="session7" >
-      <label for="tab7">第7期</label> -->
-          <!-- Tab 8 -->
-          <!-- <input type="radio" name="tabset" id="tab8" aria-controls="session8" >
-    <label for="tab8">第8期</label> -->
-          <!-- Tab 9 -->
-          <!-- <input type="radio" name="tabset" id="tab9" aria-controls="session9" >
-      <label for="tab9">第9期</label>  -->
+
 
           <div class="tab-panels">
             <section id="session1" class="tab-panel">
@@ -798,11 +784,11 @@
 
           </div>
         </div>
-      </div>
+      </div> -->
 
 
 
-      <hr class="display-mobile" style="width:113%">
+      <!-- <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
 
 
@@ -885,7 +871,7 @@
             </div>
           </li>
         </ul>
-      </div>
+      </div> -->
 
 
       <hr class="display-mobile" style="width:113%">
@@ -940,26 +926,12 @@
       </div>
 
 
-      <hr class="display-mobile" style="width:113%">
+      <!-- <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
       <h3 class="hidden-mobile">影像 <small><small>「<span id="subsection-title">以光之名</span>」</small></small></h3>
       <h3 class="display-mobile">影像 <small><small>「<span>会议/典礼</span>」</small></small><br><small><small><small>▷ <span
                 id="subsection-title-mobile">会议/典礼</span></small></small></small></h3>
 
-      <!-- <div class="doc-section hidden-mobile" id="photography">
-    <div class="gallery-wrap">
-      <div class="item item-1"></div>
-      <div class="item item-2"></div>
-      <div class="item item-3"></div>
-      <div class="item item-4"></div>
-      <div class="item item-5"></div>
-      <div class="item item-6"></div>
-      <div class="item item-7"></div>
-      <div class="item item-8"></div>
-      <div class="item item-9"></div>
-      <div class="item item-10"></div>
-    </div>
-  </div> -->
 
       <div class="doc-section" id="gallery">
 
@@ -1288,12 +1260,7 @@
         </div>
 
 
-
-        <!---<img class="hidden-mobile" src="images/SDG_all.png" style="width:100%" alt="">
-      <img class="display-mobile" src="images/SDG_all.png" style="width:100%" alt="">--->
-
-
-      </div>
+      </div> -->
 
 
       <hr class="display-mobile" style="width:113%">
