--- a/kr-research.html
+++ b/kr-research.html
@@ -817,7 +817,7 @@
         </ol>
       </div>
 
-      <hr />
+      <!-- <hr />
       <div class="doc-section" id="Dissertations">
         <h3>논문</h3>
         <ol>
@@ -844,7 +844,7 @@
             <em><strong>학사</strong> 학위 논문. 과학 학사. 베이징 교통 대학, 베이징, 중국, 2013년.</em> [<a href="" target="_blank">PDF</a>]
           </li>
         </ol>
-      </div>
+      </div> -->
 
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
