--- a/kr.html
+++ b/kr.html
@@ -527,9 +527,10 @@
       <p align="justify">
         <span class="display-mobile">환영합니다, <span id="location2">지구</span>에서 온 친구들 :-）</br></br></span>
 
-        현재, 쉬홍 (
+        현재, 쉬홍
+        <!-- (
         <script
-          id="first-script">const currentYear = new Date().getFullYear() - 1993; document.write(currentYear);</script>세)
+          id="first-script">const currentYear = new Date().getFullYear() - 1993; document.write(currentYear);</script>세) -->
         박사는 독일 산업계에서 <strong>신에너지 동력 시스템</strong> 전문가 엔지니어로 일하고 있으며, <strong>에너지와 교통</strong> 분야의 <strong>탄소 중립</strong>
         실현에 전념하고 있습니다. 학위 취득 중 다국적 기업 및 중유럽 학술 기관과 협력하여 <strong>15편 이상의 논문</strong>을 발표하고, <strong>300회 이상
           인용</strong>되었으며, <strong>3건의 특허</strong>를 획득했습니다. <strong><a href="https://unfccc.int/" target="_blank">유엔 본
