--- a/ru-research.html
+++ b/ru-research.html
@@ -836,7 +836,7 @@
       </div>
 
 
-      <hr class="display-mobile" style="width:113%">
+      <!-- <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="dissertations">
@@ -872,7 +872,7 @@
             Пекин, Китай.
           </li>
         </ol>
-      </div>
+      </div> -->
 
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
