--- a/cn-research.html
+++ b/cn-research.html
@@ -568,7 +568,7 @@
                 <ul class="square">
                     <li><strong>新能源技术</strong>、氢能/光伏/锂电、碳中和、低碳智能交通<br>
                         <!-- <li><strong>能源经济学</strong>、能源政策、ESG投资、数字可持续发展<br> -->
-                    <li><strong>计算机成像</strong>、X射线技术、图像处理、计算机视觉 <br>
+                    <li><strong>计算机成像</strong>、X射线技术、图像重建、计算机视觉、深度学习 <br>
                     <li><strong>功能新材料</strong>、半导体、高分子、MOFs、3D打印、材料LCA<br>
                         <!-- <li><strong>股票研究</strong>、大数据分析、行业研究、商业分析<br> -->
 
@@ -695,7 +695,8 @@
             <hr class="hidden-mobile">
 
             <div class="doc-section" id="publications">
-                <h3>学术论文 <small><small>(引用数: <span id="citation-number-container">300+</span>)</small></small></h3>
+                <h3>学术论文 <small><small><!---(引用数: <span id="citation-number-container">300+</span>)---></small></small>
+                </h3>
 
                 <ul class="square">
                     <li><strong>能源经济 / 政策 / 战略: </strong><br>
@@ -983,7 +984,7 @@
             <hr class="hidden-mobile">
 
             <div class="doc-section" id="patents">
-                <h3>国家专利 <small><small>(引用数: 18+)</small></small></h3>
+                <h3>国家专利 <small><small><!---(引用数: 18+)---></small></small></h3>
                 <ol>
                     <li>
                         <strong>环形气液界面跳汰磁选装置 [P]</strong><br>
@@ -1007,7 +1008,7 @@
             </div>
 
 
-            <hr class="display-mobile" style="width:113%">
+            <!---<hr class="display-mobile" style="width:113%">
             <hr class="hidden-mobile">
 
             <div class="doc-section" id="dissertations">
@@ -1051,7 +1052,7 @@
                     </li>
                 </ol>
             </div>
-
+--->
 
             <hr class="display-mobile" style="width:113%">
             <hr class="hidden-mobile">
@@ -1130,7 +1131,7 @@
                     <li>
                         <strong>H. Xu</strong>, 联合国气候变化框架公约科学和技术咨询附属机构第六十届会议 <br>
                         Sixtieth session of the Subsidiary Body for Scientific and Technological Advice<br>
-                        <em>2024 | 联合国波恩气候变化大会</em>, 波恩, 德国. <strong>[参会]</strong> [<a href="https://unfccc.int/sb58"
+                        <em>2024 | 联合国波恩气候变化大会</em>, 波恩, 德国. <strong>[演讲]</strong> [<a href="https://unfccc.int/sb58"
                             target="_blank">链接</a>]
                     </li>
 
@@ -1344,11 +1345,11 @@
                             target="_blank"><span class='blue'>calendly.com/heliosxu/45min</span></a> (1vs1会议, 请提前预约)
                     </li>
                     <li><strong>领英</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
-                            target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a> (关注者: 1800+)<br>
+                            target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a> (关注者: 1900+)<br>
                     </li>
                     <li><strong>谷歌学术</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
                             target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (引用数:
-                        300+)<br></li>
+                        320+)<br></li>
                     <li><strong>知乎</strong>: <a href="https://www.zhihu.com/people/dr.of.nothing" target="_blank"
                             target="_blank"><span class='blue'>zhihu.com/people/dr.of.nothing</span></a> (关注者:
                         13500+)<br></li>
@@ -1438,7 +1439,7 @@
                         2016 -
                         <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script>
                         | 徐泓
-                        <small>博士</small> | 更新: 2024年7月 <a href="https://www.sigmatraffic.com?ref=232975"></a>
+                        <small>博士</small> | 更新: 2024年9月 <a href="https://www.sigmatraffic.com?ref=232975"></a>
                     </small></p>
             </footer>
 
