--- a/de-activities.html
+++ b/de-activities.html
@@ -683,7 +683,7 @@
                 <div class="image-title">
                   <span>
                     <img class="flag-icon" src="./images/wflags/ch.png" alt="Schweiz">
-                    Bau/Übernachtung in einem Iglu auf dem Titlis
+                    Übernachtung in einem Iglu auf dem Titlis
                   </span>
                 </div>
               </div>
@@ -691,14 +691,14 @@
                 <img src="images/sports/10.jpg" alt="Bild 2" class="grid-image">
                 <div class="image-title">
                   <img class="flag-icon" src="./images/wflags/de.png" alt="Deutschland">
-                  Klettern auf dem Münchner Oktoberfestgelände
+                  Klettern auf dem Oktoberfest
                 </div>
               </div>
               <div class="grid-item">
                 <img src="images/sports/11.jpg" alt="Bild 3" class="grid-image">
                 <div class="image-title">
                   <img class="flag-icon" src="./images/wflags/ch.png" alt="Schweiz">
-                  Sonnenuntergang/Snowman-Bau auf dem Rigi
+                  Snowman-Bau auf dem Rigi
                 </div>
               </div>
             </div>
