--- a/es-activities.html
+++ b/es-activities.html
@@ -683,7 +683,7 @@
                 <div class="image-title">
                   <span>
                     <img class="flag-icon" src="./images/wflags/ch.png" alt="Suiza">
-                    Construcción/Durmiendo en un iglú en el Monte Titlis
+                    Durmiendo en un iglú en el Monte Titlis
                   </span>
                 </div>
               </div>
@@ -691,14 +691,14 @@
                 <img src="images/sports/10.jpg" alt="Imagen 2" class="grid-image">
                 <div class="image-title">
                   <img class="flag-icon" src="./images/wflags/de.png" alt="Alemania">
-                  Escalada en el terreno del Oktoberfest de Múnich
+                  Escalada en el terreno del Oktoberfest
                 </div>
               </div>
               <div class="grid-item">
                 <img src="images/sports/11.jpg" alt="Imagen 3" class="grid-image">
                 <div class="image-title">
                   <img class="flag-icon" src="./images/wflags/ch.png" alt="Suiza">
-                  Atardecer/Construcción de muñecos de nieve en el Monte Rigi
+                  Muñecos de nieve en el Monte Rigi
                 </div>
               </div>
             </div>
