--- a/fr-activities.html
+++ b/fr-activities.html
@@ -709,7 +709,7 @@
                 <div class="image-title">
                   <span>
                     <img class="flag-icon" src="./images/wflags/ch.png" alt="Suisse">
-                    Construction/Passage de nuit dans un igloo sur le mont Titlis
+                    Passage de nuit dans un igloo sur le mont Titlis
                   </span>
                 </div>
               </div>
@@ -724,7 +724,7 @@
                 <img src="images/sports/11.jpg" alt="Image 3" class="grid-image">
                 <div class="image-title">
                   <img class="flag-icon" src="./images/wflags/ch.png" alt="Suisse">
-                  Coucher de soleil/Construction de bonhommes de neige sur le mont Rigi
+                  Bonhommes de neige sur le mont Rigi
                 </div>
               </div>
             </div>
