--- a/it-activities.html
+++ b/it-activities.html
@@ -643,7 +643,7 @@
                 <div class="image-title">
                   <span>
                     <img class="flag-icon" src="./images/wflags/ch.png" alt="Svizzera">
-                    Costruzione/Soggiorno in un Igloo sul Monte Titlis
+                    Soggiorno in un Igloo sul Monte Titlis
                   </span>
                 </div>
               </div>
@@ -651,14 +651,14 @@
                 <img src="images/sports/10.jpg" alt="Immagine 2" class="grid-image">
                 <div class="image-title">
                   <img class="flag-icon" src="./images/wflags/de.png" alt="Germania">
-                  Arrampicata ai Terreni dell'Oktoberfest di Monaco
+                  Arrampicata ai Terreni dell'Oktoberfest
                 </div>
               </div>
               <div class="grid-item">
                 <img src="images/sports/11.jpg" alt="Immagine 3" class="grid-image">
                 <div class="image-title">
                   <img class="flag-icon" src="./images/wflags/ch.png" alt="Svizzera">
-                  Tramonto/Costruzione di Pupazzi di Neve sul Monte Rigi
+                  Pupazzi di Neve sul Monte Rigi
                 </div>
               </div>
             </div>
