--- a/jp-activities.html
+++ b/jp-activities.html
@@ -425,8 +425,9 @@
         <div id="myLinks">
           <ul>
             <hr>
-            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="jp.html"><small>▸ 私について
-                    ⇨</small></a></strong><br>
+            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="jp.html"><small
+                    style="color: rgb(97, 97, 97);">▸ 私について
+                  </small></a></strong><br>
             </li>
 
             <li><a href="jp-research.html"><small><span style="color: rgb(97, 97, 97);">▸
@@ -454,21 +455,21 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 受賞</small></a></li>
             </div>
 
-            <li><a href="jp-activities.html"><small style="color: rgb(97, 97, 97);">▸ <strong>趣味</strong></small></a>
+            <li><a href="jp-activities.html"><strong><small style="color: rgb(253, 93, 7);">▸ 趣味 ★</strong></small></a>
             </li>
             <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
               <li style="width: 50%; box-sizing: border-box;"><a href="jp-activities.html"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 講演者</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• 講演者</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="jp-activities.html#writing"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 執筆</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• 執筆</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="jp-activities.html#visiting"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 訪問</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• 訪問</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="jp-activities.html#travel"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 旅行</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• 旅行</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="jp-activities.html#photography"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 撮影</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• 撮影</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="jp-activities.html#sports"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• スポーツ</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• スポーツ</small></a></li>
             </div>
 
             <li><a href="jp-contact.html"><small style="color: rgb(97, 97, 97);">▸
