--- a/jp-research.html
+++ b/jp-research.html
@@ -360,21 +360,21 @@
         <div id="myLinks">
           <ul>
             <hr>
-            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="jp.html"><small>▸ 私について
-                    ⇨</small></a></strong><br>
+            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="jp.html"><small
+                    style="color: rgb(97, 97, 97);">▸ 私について </small></a></strong><br>
             </li>
 
-            <li><a href="jp-research.html"><small><span style="color: rgb(97, 97, 97);">▸
-                    <strong>研究進捗</strong></span></small></a></li>
+            <li><a href="jp-research.html"><small><strong><span style="color: rgb(253, 93, 7);">▸
+                      研究進捗 ★</strong></span></small></a></li>
             <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
               <li style="width: 50%; box-sizing: border-box;"><a href="jp-research.html#publications"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 出版物</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• 出版物</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="jp-research.html#patents"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 特許</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• 特許</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="jp-research.html#presentations"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 会議</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• 会議</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="jp-research.html#equity-research"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 証券研究</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• 証券研究</small></a></li>
             </div>
 
             <li><a href="jp-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>履歴</strong></small></a></li>
