--- a/jp-resume.html
+++ b/jp-resume.html
@@ -374,8 +374,9 @@
         <div id="myLinks">
           <ul>
             <hr>
-            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="jp.html"><small>▸ 私について
-                    ⇨</small></a></strong><br>
+            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="jp.html"><small
+                    style="color: rgb(97, 97, 97);">▸ 私について
+                  </small></a></strong><br>
             </li>
 
             <li><a href="jp-research.html"><small><span style="color: rgb(97, 97, 97);">▸
@@ -391,16 +392,16 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 証券研究</small></a></li>
             </div>
 
-            <li><a href="jp-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>履歴</strong></small></a></li>
+            <li><a href="jp-resume.html"><strong><small style="color: rgb(253, 93, 7);">▸ 履歴 ★</strong></small></a></li>
             <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
               <li style="width: 50%; box-sizing: border-box;"><a href="jp-resume.html#education-mobile"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 学歴</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• 学歴</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="jp-resume.html#academic-experience"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 学術経験</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• 学術経験</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="jp-resume.html#industrial-experience"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 産業経験</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• 産業経験</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="jp-resume.html#awards"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 受賞</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• 受賞</small></a></li>
             </div>
 
             <li><a href="jp-activities.html"><small style="color: rgb(97, 97, 97);">▸ <strong>趣味</strong></small></a>
