--- a/jp.html
+++ b/jp.html
@@ -430,7 +430,7 @@
           <ul>
             <hr>
             <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="jp.html"><small>▸ 私について
-                    ⇨</small></a></strong><br>
+                    ★</small></a></strong><br>
             </li>
 
             <li><a href="jp-research.html"><small><span style="color: rgb(97, 97, 97);">▸
